plugins {
    id 'com.android.application'
}

android {
    namespace "com.tv.live"

    // ====================================================================
    // ✅ compileSdk 保持 36
    // ====================================================================
    // Media3 1.7.1 要求 compileSdk 至少 33，36 完全够用。
    compileSdk 36

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        coreLibraryDesugaringEnabled true
    }

    buildFeatures {
        buildConfig true
    }

    defaultConfig {
        applicationId "com.tv.live"

        // ====================================================================
        // ✅ 2026-06-25 降级：minSdk 23 → 21
        // ====================================================================
        // 【为什么降回 21？】
        // Media3 1.7.1 是最后一个支持 minSdk 21 的版本，
        // 降回 21 可以兼容 Android 5.0+ 的低端电视设备。
        //
        // 【版本历史】
        // - 1.7.1 及以下：minSdk = 21（支持 Android 5.0+）
        // - 1.8.0 及以上：minSdk = 23（直接跳到 Android 6.0+）
        // - 中间没有 minSdk = 22 的版本
        //
        // 【影响】
        // 可以兼容 Android 5.0/5.1（API 21-22）的设备，
        // 覆盖更多低端电视盒子。
        minSdk 21

        // ====================================================================
        // ✅ targetSdk 保持 36
        // ====================================================================
        targetSdk 36

        versionCode 20
        versionName "2.0"

        multiDexEnabled true

        buildConfigField "int", "VERSION_CODE", "${versionCode}"
        buildConfigField "String", "VERSION_NAME", "\"${versionName}\""

        ndk {
            abiFilters 'arm64-v8a', 'armeabi-v7a'
        }
    }

    signingConfigs {
        release {
            storeFile file("../release.keystore")
            storePassword "admin123"
            keyAlias "myreleasekey"
            keyPassword "admin123"
            v1SigningEnabled true
            v2SigningEnabled true
        }
        debug {
            storeFile file("../debug.keystore")
            storePassword "android"
            keyAlias "androiddebugkey"
            keyPassword "android"
            v1SigningEnabled true
            v2SigningEnabled true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            shrinkResources false
            crunchPngs false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
        debug {
            signingConfig signingConfigs.debug
        }
    }

    packagingOptions {
        resources {
            pickFirsts += ['META-INF/com.android.tools/proguard/coroutines.pro']
        }
    }

    // ====================================================================
    // ✅ 配置 libs 目录为 AAR 仓库
    // ====================================================================
    // 【2026-06-26 说明】
    // 原来放 FFmpeg AAR 的，现在改用系统软解，不需要了。
    // 保留这个配置是为了以后可能需要其他 AAR 时方便。
    repositories {
        flatDir {
            dirs 'libs'
        }
    }
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'

    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "com.google.android.material:material:1.11.0"
    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation 'com.google.zxing:core:3.5.1'
    implementation 'com.google.code.gson:gson:2.10.1'

    // ====================================================================
    // ✅ 2026-06-25 降级：Media3 1.10.1 → 1.7.1
    // ====================================================================
    // 【为什么用 1.7.1？】
    // 1.7.1 是最后一个支持 minSdk 21 的 Media3 版本，
    // 1.8.0 开始 minSdk 直接跳到 23，不支持 Android 5.x。
    //
    // 【版本选择理由】
    // 1. 最后一个支持 minSdk 21 的版本，兼容性最好
    // 2. 相比 1.5.0，有更多 bug 修复和性能优化
    // 3. 相比 2.x 版本，API 更稳定，迁移成本更低
    //
    // 【2026-06-26 更新：改用系统软解，不再需要 FFmpeg 扩展】
    // 原来的 FFmpeg 扩展已经移除，改用系统自带的软件解码器。
    // 优点：无需额外库、不增加 APK 大小、集成简单
    // 缺点：性能不如 FFmpeg、支持的格式少一些

    // ✅ Media3 核心播放器
    implementation "androidx.media3:media3-exoplayer:1.7.1"
    // ✅ Media3 UI 组件（PlayerView 等）
    implementation "androidx.media3:media3-ui:1.7.1"
    // ✅ Media3 HLS 支持（直播流）
    implementation "androidx.media3:media3-exoplayer-hls:1.7.1"
    // ✅ Media3 DASH 支持
    implementation "androidx.media3:media3-exoplayer-dash:1.7.1"
    // ✅ Media3 通用工具
    implementation "androidx.media3:media3-common:1.7.1"
    // ✅ Media3 数据源
    implementation "androidx.media3:media3-datasource:1.7.1"

    implementation "com.squareup.okhttp3:okhttp:4.12.0"
    implementation "com.squareup.retrofit2:retrofit:2.11.0"
    implementation "com.squareup.retrofit2:converter-gson:2.11.0"

    implementation "com.github.bumptech.glide:glide:4.16.0"
    annotationProcessor "com.github.bumptech.glide:compiler:4.16.0"

    implementation "org.apache.commons:commons-lang3:3.14.0"
    implementation "com.blankj:utilcodex:1.31.1"
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
}
